deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: flask-app
  namespace: dev

spec:
  replicas: 2

  selector:
    matchLabels:
      app: flask

  template:
    metadata:
      labels:
        app: flask

    spec:
      containers:
        - name: flask
          image: anadi07/flaskapp:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 5000

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"

          readinessProbe:
            httpGet:
              path: /ready
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
