postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: postgres-demo

spec:
  serviceName: postgres-demo

  replicas: 2

  selector:
    matchLabels:
      app: postgres-demo

  template:
    metadata:
      labels:
        app: postgres-demo

    spec:
      containers:
        - name: postgres
          image: postgres:15

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
    - metadata:
        name: postgres-data

      spec:
        accessModes:
          - ReadWriteOnce

        storageClassName: standard

        resources:
          requests:
            storage: 1Gi
