postgres-demo-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres-demo

spec:
  clusterIP: None

  selector:
    app: postgres-demo

  ports:
    - port: 5432
      targetPort: 5432
